--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "npm rebuild @tailwindcss/oxide"
-
   },
   "dependencies": {
     "firebase": "^11.10.0",
     "lightningcss": "^1.30.1",
+    "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-switch": "^7.1.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.1.0"
   },
   "devDependencies": {
