--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "postinstall": "npm rebuild @tailwindcss/oxide"
   },
   "dependencies": {
+    "chart.js": "^4.5.0",
     "firebase": "^11.10.0",
+    "framer-motion": "^12.23.12",
     "lightningcss": "^1.30.1",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-switch": "^7.1.0",
     "react-toastify": "^11.0.5",
