--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "npm rebuild @tailwindcss/oxide"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "chart.js": "^4.5.0",
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.12",
