--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "framer-motion": "^12.23.12",
     "lightningcss": "^1.30.1",
     "lucide-react": "^0.525.0",
-    "next": "15.3.4",
-    "react": "^19.0.0",
+    "next": "^16.1.1",
+    "react": "^19.2.3",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.3",
     "react-switch": "^7.1.0",
     "react-toastify": "^11.0.5",
+    "reactdom": "^2.0.0",
     "recharts": "^3.1.0"
   },
   "devDependencies": {
